--- a/testdata/README
+++ b/testdata/README
@@ -15,17 +15,19 @@
 - eventlog2.bin is an event log from the same QEMU instance but with with secure boot validation disabled in shim
   via MokSBState.
 
-- mock.efi.signed.1 is a mock EFI executable signed with the key from the test certificate in db2.bin.
+- mock.efi is a mock EFI executable that has no signature.
+- mock.efi.signed.1 is a mock EFI executable signed with the key from a certificate issued by the test CA in
+  db2.bin.
 - mock.efi.signed.2 is the same as mock.efi.signed.1 but signed with the key from a certificate issued by the
   second test CA in db3.bin.
 
-- mockshim1.efi.signed.1 is a mock shim EFI executable signed with the key from the test certificate in db2.bin,
-  and the same certificate embedded as the vendor cert.
+- mockshim1.efi.signed.1 is a mock shim EFI executable signed with the key from a certificate issued by the test
+  CA in db2.bin, and the same test CA certificate embedded as the vendor cert.
 - mockshim1.efi.signed.2 is the same as mockshim1.efi.signed.1 but signed with the key from a certificate issued
   by the second test CA in db3.bin.
-- mockshim2.efi.signed.1 is a mock shim EFI executable signed with the key from the test certificate in db2.bin,
-  and the second test certificate from db3.bin embedded as the vendor cert.
+- mockshim2.efi.signed.1 is a mock shim EFI executable signed with the key from a certificate issued by the test CA
+  in db2.bin, and the second test CA certificate from db3.bin embedded as the vendor cert.
 - mockshim2.efi.signed.2 is the same as mockshim2.efi.signed.1 but signed with the key from a certificate issued
   by the second test CA in db3.bin.
-- mockshim.efi.signed.1 is a mock shim EFI executable signed with the key from the test certificate in db2.bin,
-  with no vendor cert.
+- mockshim.efi.signed.1 is a mock shim EFI executable signed with the key from a certificate issued by the test CA
+  in db2.bin, with no vendor cert.
