Move test UEFI signature db update in to correctly laid out directories recognized by sbkeysync

--- a/testdata/README
+++ b/testdata/README
@@ -12,9 +12,10 @@
   - The same UEFI signature database from efivars1/
   - The same UEFI signature database from efivars1/, but with MS-2016-08-08.bin applied.
 
-- db-update1.bin is a UEFI db update containing the second test CA certificate from db3.bin.
-- dbx-update1.bin is a UEFI dbx update based on the contents of dbx3.bin, but with 2 sha256 signatures changed
-  (one digest and one owner GUID).
+- updates/ contains the MS-2016-08-08.bin dbx update.
+- updates1/ contains a UEFI db update containing the second test CA certificate already enrolled in efivars2/.
+- updates2/ contains a UEFI forbidden signature db update based on the contents of the forbidden signature
+  database from efivars3/, but with 2 sha256 signatures changed (one digest and one owner GUID).
 
 - eventlog1.bin is an event log from a QEMU instance running OVMF with the following configuration:
   - "Ubuntu OVMF Secure Boot (PK/KEK key)" enrolled in to PK.
